<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar" >

        <TextView
            android:id="@+id/title"
            style="@style/topbar_text"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/flashcards" />
    </RelativeLayout>

    <TextView
        android:id="@+id/header"
        style="@style/titleblacktxtstyle"
        android:layout_below="@id/titlebar"
        android:background="@drawable/flashcards_header"
        android:text="@string/all_chapters" />

    <RelativeLayout
        android:id="@+id/prev_next"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/title_bar" >

        <ImageView
            android:layout_width="22dp"
            android:layout_height="18dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:src="@drawable/left_action" />

        <ImageView
            android:id="@+id/prev"
            android:layout_width="62dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp"
            android:src="@drawable/click_bg" />

        <ImageView
            android:layout_width="22dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="80dp"
            android:src="@drawable/right_action" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="62dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:src="@drawable/click_bg" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/prev_next"
        android:layout_below="@id/header"
        android:layout_marginTop="-10dp"
        android:background="@drawable/flashcard_bg" >

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:id="@+id/flashcard"
                android:layout_width="314dp"
                android:layout_height="311dp"
                android:layout_gravity="center"
                android:background="@drawable/flashcards"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/statics"
                    style="@style/flashstaticstextstyle"
                    android:text="Statics" />

                <TextView
                    android:id="@+id/question"
                    style="@style/flashquestiontextstyle"
                    android:layout_below="@id/statics"
                    android:text="Question" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/flashcardnext"
                android:layout_width="284dp"
                android:layout_height="281dp"
                android:layout_gravity="center"
                android:background="@drawable/flashcardsnext"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/answer"
                    style="@style/flashanswertextstyle"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:maxLines="6"
                    android:minLines="1"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    android:text="Answer Answer" />

                <RelativeLayout
                    android:id="@+id/bookmark"
                    android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="154dp"
                    android:gravity="center" >

                    <ImageView
                        android:id="@+id/bookmarkIcon"
                        android:layout_width="40dp"
                        android:layout_height="fill_parent"
                        android:scaleType="centerInside"
                        android:src="@drawable/bookmark_icon" />

                    <TextView
                        android:id="@+id/addToBookmarks"
                        style="@style/flashbookmarktextstyle"
                        android:layout_toRightOf="@id/bookmarkIcon"
                        android:text="@string/addToBookmarks" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/bigNext"
                    android:layout_width="140dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="192dp"
                    android:src="@drawable/click_bg" />
            </RelativeLayout>
        </FrameLayout>
    </RelativeLayout>

</RelativeLayout>